compiler/testData/cli/js/diagnosticWhenReferenceToBuiltinsMember.kt
package foo

fun test() {
    Int::toByte
    String::get
}
